--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^6.1.0",
     "inquirer": "^6.2.1",
     "moment": "^2.22.2",
-    "node-spotify-api": "^1.0.7"
+    "node-spotify-api": "^1.0.7",
+    "nodemailer": "^4.7.0"
   }
 }
